linux (4.19.28-3) UNRELEASED; urgency=medium

  * debian/bin/abiupdate.py: Automatically select the correct archive to fetch
    from

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Mar 2019 22:50:08 +0000

linux (4.19.28-2) unstable; urgency=medium

  [ Ben Hutchings ]
  * [x86,alpha,m68k] binfmt: Disable BINFMT_AOUT, IA32_AOUT, OSF4_COMPAT
  * [x86] Drop fix for #865303, which no longer affects Debian's OpenJDK
  * udeb: Make serial_cs optional in serial-modules
  * [ppc64el] Disable PCMCIA (fixes FTBFS)

  [ Vagrant Cascadian ]
  * [arm64] Enable DRM_SUN4I and DRM_SUN8I_DW_HDMI as modules.
  * [arm64] Enable I2C_GPIO as a module.
  * [arm64] Enable MESON_EFUSE as a module.

  [ Yves-Alexis Perez ]
  * certs: include both root CA and direct signing certificate.
    closes: #924545

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 15 Mar 2019 02:16:04 +0000

linux (4.19.28-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.19.21
    - devres: Align data[] to ARCH_KMALLOC_MINALIGN
    - drm/bufs: Fix Spectre v1 vulnerability
    - drm/vgem: Fix vgem_init to get drm device available.
    - [arm*] pinctrl: bcm2835: Use raw spinlock for RT compatibility
    - [x86] ASoC: Intel: mrfld: fix uninitialized variable access
    - gpiolib: Fix possible use after free on label
    - [armhf] drm/sun4i: Initialize registers in tcon-top driver
    - genirq/affinity: Spread IRQs to all available NUMA nodes
    - [armhf] gpu: ipu-v3: image-convert: Prevent race between run and
      unprepare
    - wil6210: fix reset flow for Talyn-mb
    - wil6210: fix memory leak in wil_find_tx_bcast_2
    - ath10k: assign 'n_cipher_suites' for WCN3990
    - ath9k: dynack: use authentication messages for 'late' ack
    - scsi: lpfc: Correct LCB RJT handling
    - scsi: mpt3sas: Call sas_remove_host before removing the target devices
    - scsi: lpfc: Fix LOGO/PLOGI handling when triggerd by ABTS Timeout event