@@ -2,6 +2,7 @@ linux (4.19.28-3) UNRELEASED; urgency=medium
 
   * debian/bin/abiupdate.py: Automatically select the correct archive to fetch
     from
+  * debian/bin/abiupdate.py: Change default URLs to use https: scheme
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 18 Mar 2019 22:50:08 +0000
 
